Fix About page display on mobile devices

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,3 +9,5 @@ $white-color: #fafafa;
 
 $small-device-width: 1080px;
 $small-device-height: 900px;
+
+$mobile-device-max-width: 430px;
